k8s/services/shopnoltd-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopnoltd-web
  namespace: shopno-platform
  labels:
    app.kubernetes.io/name: shopnoltd-web
    app.kubernetes.io/component: frontend
spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: shopnoltd-web

  template:
    metadata:
      labels:
        app.kubernetes.io/name: shopnoltd-web
        app.kubernetes.io/component: frontend

    spec:
      containers:
        - name: web

          image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-shopnoltd-web:latest

          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          resources:
            requests:
              cpu: 25m
              memory: 32Mi

            limits:
              cpu: 200m
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
