k8s/services/shopnoltd-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopnoltd-web
  namespace: shopno-platform
spec:
  selector:
    app.kubernetes.io/name: shopnoltd-web

  ports:
    - name: http
      port: 80
      targetPort: http

  type: ClusterIP
